chore: Update dependencies in pyproject.toml for compatibility; add cache directory to .gitignore; enhance training script for MDM with llada_tiny

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,4 +13,6 @@ dependencies = [
     "wandb==0.14.0",
     "torch==2.5.1",
     "pre-commit>=4.3.0",
+    "aiohttp<3.11",  # aiohttp 3.11+ is not compatible with Python 3.9
+    "numpy<2.0.0",  # numpy 2.0+ is not compatible with Python 3.9
 ]
